# FujfilmShift

./: README.md  SDK_Programming_Reference.md
fujifilm_shift_app/: README.md  analysis_options.yaml  pubspec.yaml
fujifilm_shift_app/lib/: main.dart
fujifilm_shift_app/lib/src/: app.dart
fujifilm_shift_app/lib/src/core/providers/: camera_provider.dart  settings_provider.dart  theme_provider.dart
fujifilm_shift_app/lib/src/core/services/: window_size_service.dart
fujifilm_shift_app/lib/src/core/theme/: app_theme.dart
fujifilm_shift_app/lib/src/features/camera/data/models/: camera_models.dart
fujifilm_shift_app/lib/src/features/camera/data/services/: camera_service.dart  fujifilm_sdk_bindings.dart
fujifilm_shift_app/lib/src/features/camera/presentation/pages/: camera_dashboard_page.dart  sd_card_browser_page.dart
fujifilm_shift_app/lib/src/features/camera/presentation/widgets/: camera_settings_manager.dart  pixel_shift_controls.dart
fujifilm_shift_app/lib/src/features/home/presentation/pages/: home_page.dart
fujifilm_shift_app/lib/src/features/home/presentation/widgets/: camera_connection_card.dart  feature_card.dart  quick_action_card.dart  welcome_header.dart
fujifilm_shift_app/lib/src/features/settings/presentation/pages/: settings_page.dart
fujifilm_shift_app/lib/src/features/stitching/data/services/: native_stitcher_bindings.dart  stitching_service.dart
fujifilm_shift_app/native/: CMakeLists.txt  README.md
fujifilm_shift_app/native/src/: fuji_stitcher.cpp  fuji_stitcher.h
fujifilm_shift_app/sdk/: GFX100II.h  GFX100SII.h  X-H2.h  X-H2S.h  X-S20.h  X-T5.h  XAPIOpt.H
fujifilm_shift_app/test/: widget_test.dart
fujifilm_shift_app/windows/: CMakeLists.txt
fujifilm_shift_app/windows/runner/: Runner.rc  main.cpp
